[Add] Datasets: gale arabic, gale mandarin, eval2000, santa barbara corpus Distributed training MUSAN noise support for fbank, hubert prediction of cuts DIHARD3 domains subset of cutsets

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+*.sh
+*.slurm
+
 data/*
 !data/*.py
 
 experiments
-
-lhotse-test
+force_align
 
 lightning_logs
 logs
@@ -11,7 +13,6 @@ wandb
 
 swb_ms98_transcriptions
 switchboard_word_alignments.tar.gz
-voxceleb_trials.txt
 
 
 # Byte-compiled / optimized / DLL files
